Bug 1962010: Skip over time zone transition which don't change the time zone offset. r=spidermonkey-reviewers,dminor

ICU4C returns transitions for all time zone rule changes, even if the effective
time zone offset didn't change. Temporal wants us to ignore these transitions.

Differential Revision: https://phabricator.services.mozilla.com/D251136